--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^5.2.1",
     "cors": "^2.8.5",
-    "nodemon": "^3.1.11"
+    "dotenv": "^16.6.1",
+    "express": "^5.2.1"
   }
 }
